force-app/main/default/objects/Account/fields/PG_Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>PG_Portfolio_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PG Portfolio Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria of EDF Staff.</errorMessage>
        <filterItems>
            <field>Contact.EDF_Staff__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Constituency_Text__c</field>
            <operation>contains</operation>
            <value>EDF Alumni</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (PG Portfolio Manager)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>