force-app/main/default/objects/Account/fields/PG_Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>PG_Qualification_Notes__c</fullName>
    <label>PG Research Qualification Notes</label>
    <type>TextArea</type>
</CustomField>