force-app/main/default/objects/Account/fields/PG_Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>PG_Qualification_Status__c</fullName>
    <label>PG Qualification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PG Gift Officer Qualified</fullName>
            </value>
            <value>
                <fullName>PG Gift Officer Disqualified</fullName>
            </value>
            <value>
                <fullName>PG Gift Officer Pending</fullName>
            </value>
            <value>
                <fullName>Research Recommends PG Portfolio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>