force-app/main/default/objects/Account/fields/PG_Qualified_Donor_Ranking__c.field-meta.xml
<CustomField>
    <fullName>PG_Qualified_Donor_Ranking__c</fullName>
    <label>PG Qualified Donor Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>