force-app/main/default/objects/Account/fields/PGPM_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>PGPM_is_Current_User__c</fullName>
    <formula>$User.User_Contact_ID__c =  PG_Portfolio_Manager__c</formula>
    <label>PGPM is Current User</label>
    <type>Checkbox</type>
</CustomField>