force-app/main/default/objects/Account/fields/Philanthropic_Propensity__c.field-meta.xml
<CustomField>
    <fullName>Philanthropic_Propensity__c</fullName>
    <label>Philanthropic Propensity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>