force-app/main/default/objects/Account/fields/Planned_Gift_Soft_Credit_Total__c.field-meta.xml
<CustomField>
    <fullName>Planned_Gift_Soft_Credit_Total__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>This field is created to get the soft credit roll up for Estate Account</description>
    <label>Planned Gift Soft Credit Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>