force-app/main/default/objects/Account/fields/Potential_PG_Type_Source__c.field-meta.xml
<CustomField>
    <fullName>Potential_PG_Type_Source__c</fullName>
    <label>Potential PG Type Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned Giving</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>