force-app/main/default/objects/Account/fields/Press_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Press_Coverage__c</fullName>
    <label>Press Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Eager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>