force-app/main/default/objects/Account/fields/Profile_Manager__c.field-meta.xml
<CustomField>
    <fullName>Profile_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Profile Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Profile Manager)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>