force-app/main/default/objects/Account/fields/Program_Interests_Account_EDF__c.field-meta.xml
<CustomField>
    <fullName>Program_Interests_Account_EDF__c</fullName>
    <label>Program Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program</valueSetName>
    </valueSet>
</CustomField>