force-app/main/default/objects/Account/fields/Program_Sub_Interest_Account_EDF__c.field-meta.xml
<CustomField>
    <fullName>Program_Sub_Interest_Account_EDF__c</fullName>
    <label>Program Sub Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subprogram</valueSetName>
    </valueSet>
</CustomField>