force-app/main/default/objects/Account/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <description>Created as a part of Data Migration Heller 2021.</description>
    <label>Property/Asset</label>
    <type>TextArea</type>
</CustomField>