force-app/main/default/objects/Account/fields/Qualified_Donor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Donor_Notes__c</fullName>
    <label>Qualified Donor Notes</label>
    <type>TextArea</type>
</CustomField>