force-app/main/default/objects/Account/fields/Readiness__c.field-meta.xml
<CustomField>
    <fullName>Readiness__c</fullName>
    <label>Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6 months or less</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
            <value>
                <fullName>more than 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>