force-app/main/default/objects/Account/fields/Reason_for_no_future_CC_outreach__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_future_CC_outreach__c</fullName>
    <description>Explain why we should not contact this company for future Climate Corps recruiting outreach.</description>
    <inlineHelpText>Explain why we should not contact this company for future Climate Corps recruiting outreach.</inlineHelpText>
    <label>Reason for no future CC outreach</label>
    <type>TextArea</type>
</CustomField>