force-app/main/default/objects/Account/fields/Receip_report_Address_Exists__c.field-meta.xml
<CustomField>
    <fullName>Receip_report_Address_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by flow when related Address receipt/report checkbox values change.</description>
    <inlineHelpText>Populated by flow when related Address receipt/report checkbox values change.</inlineHelpText>
    <label>Receipt/Report Address Exists</label>
    <type>Checkbox</type>
</CustomField>