force-app/main/default/objects/Account/fields/Record_Type_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name_c__c</fullName>
    <description>Used by Membership in external platforms to easily identify the Account Record Type without having to use the record type IDs.</description>
    <formula>$RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>