force-app/main/default/objects/Account/fields/Refresh_DLRS_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Refresh_DLRS_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this field to ensure DLRS rollups are accurate for Account. Only use with DLRS Calculate button.</inlineHelpText>
    <label>Refresh DLRS Rollup</label>
    <type>Checkbox</type>
</CustomField>