force-app/main/default/objects/Account/fields/Regional_Interest_Account_EDF__c.field-meta.xml
<CustomField>
    <fullName>Regional_Interest_Account_EDF__c</fullName>
    <label>Regional Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia-Pacific</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Canada Alberta</fullName>
            </value>
            <value>
                <fullName>Canada British Columbia</fullName>
            </value>
            <value>
                <fullName>Canada Manitoba</fullName>
            </value>
            <value>
                <fullName>Canada New Brunswick</fullName>
            </value>
            <value>
                <fullName>Canada Newfoundland</fullName>
            </value>
            <value>
                <fullName>Canada Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Canada Ontario</fullName>
            </value>
            <value>
                <fullName>Canada Prince Edward Island</fullName>
            </value>
            <value>
                <fullName>Canada Quebec</fullName>
            </value>
            <value>
                <fullName>Canada Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Caribbean</fullName>
            </value>
            <value>
                <fullName>Central America</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Cuba</fullName>
            </value>
            <value>
                <fullName>Eurasia</fullName>
            </value>
            <value>
                <fullName>European Union</fullName>
            </value>
            <value>
                <fullName>Gulf</fullName>
            </value>
            <value>
                <fullName>Humboldt Current</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>Middle East &amp; Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>