force-app/main/default/objects/Account/fields/Residuary_of_Estate__c.field-meta.xml
<CustomField>
    <fullName>Residuary_of_Estate__c</fullName>
    <label>Residuary % of Estate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>