force-app/main/default/objects/Account/fields/RM_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>RM_is_Current_User__c</fullName>
    <formula>$User.User_Contact_ID__c =  Account_Primary_Handler__c|| 
$User.User_Contact_ID__c =   Additional_Handler_1__c|| 
$User.User_Contact_ID__c =   Additional_Handler_2__c</formula>
    <label>RM is Current User</label>
    <type>Checkbox</type>
</CustomField>