force-app/main/default/objects/Account/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This contact will be used when creating the formal and informal salutations.  For example, formulas that reference secondary titles or names will use the information from this contact.</description>
    <inlineHelpText>This contact will be used when creating the formal and informal salutations.  For example, formulas that reference secondary titles or names will use the information from this contact.</inlineHelpText>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Secondary Contact)</relationshipLabel>
    <relationshipName>AccountsSecondaryContact</relationshipName>
    <type>Lookup</type>
</CustomField>