force-app/main/default/objects/Account/fields/Secondary_SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_SIC_Code__c</fullName>
    <label>Secondary SIC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>