force-app/main/default/objects/Account/fields/SRM_EDF_Entity_Interest_Account__c.field-meta.xml
<CustomField>
    <fullName>SRM_EDF_Entity_Interest_Account__c</fullName>
    <description>EDF organizations this contact is interested in. For Program Staff use</description>
    <inlineHelpText>EDF organizations this contact is interested in</inlineHelpText>
    <label>SRM EDF Entity Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entity</valueSetName>
    </valueSet>
</CustomField>