force-app/main/default/objects/Account/fields/SRM_EDF_Interest_Notes_Account__c.field-meta.xml
<CustomField>
    <fullName>SRM_EDF_Interest_Notes_Account__c</fullName>
    <description>More detail on this contact’s interests. For Program Staff use</description>
    <inlineHelpText>More detail on this contact’s interests</inlineHelpText>
    <label>SRM EDF Interest Notes</label>
    <type>TextArea</type>
</CustomField>