force-app/main/default/objects/Account/fields/SRM_Program_Interest_Account_EDF__c.field-meta.xml
<CustomField>
    <fullName>SRM_Program_Interest_Account_EDF__c</fullName>
    <description>Programs this contact is interested in. For Program Staff use</description>
    <inlineHelpText>Programs this contact is interested in</inlineHelpText>
    <label>SRM Program Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program</valueSetName>
    </valueSet>
</CustomField>