force-app/main/default/objects/Account/fields/SRM_Program_Sub_Interest_Account_EDF__c.field-meta.xml
<CustomField>
    <fullName>SRM_Program_Sub_Interest_Account_EDF__c</fullName>
    <description>Projects this contact is interested in. For Program Staff use</description>
    <inlineHelpText>Projects this contact is interested in</inlineHelpText>
    <label>SRM Program Sub Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subprogram</valueSetName>
    </valueSet>
</CustomField>