force-app/main/default/objects/Account/fields/SRM_Regional_Interest_Account_EDF__c.field-meta.xml
<CustomField>
    <fullName>SRM_Regional_Interest_Account_EDF__c</fullName>
    <description>Regions this contact is interested in. For Program Staff use</description>
    <inlineHelpText>Regions this contact is interested in</inlineHelpText>
    <label>SRM Regional Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Interest</valueSetName>
    </valueSet>
</CustomField>