force-app/main/default/objects/Account/fields/Strategic_Value__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Value__c</fullName>
    <label>Strategic Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>