force-app/main/default/objects/Account/fields/Sub_Constituency_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Constituency_Text__c</fullName>
    <description>Returns Account Sub-Constituency as text for Compact Layouts.</description>
    <formula>IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Climate - Global Climate&quot; ), &quot;Climate - Global Climate; &quot;,null ) &amp; 
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Climate - Legal and Regulatory&quot; ), &quot;Climate - Legal and Regulatory; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Development - Government&quot; ), &quot;Development - Government; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Development - Institutional Giving&quot; ), &quot;Development - Institutional Giving; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c , &quot;Development - Major Gifts&quot; ), &quot;Development - Major Gifts; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Development - Planned Giving Estates&quot; ), &quot;Development - Planned Giving Estates; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Development - Planned Giving Ospreys&quot; ), &quot;Development - Planned Giving Ospreys; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Development - Planned Giving Prospects&quot; ), &quot;Development - Planned Giving Prospects; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;EDFBIZ - Climate Corps&quot; ), &quot;EDFBIZ - Climate Corps; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;EDFBIZ - Corporate Climate Leadership&quot; ), &quot;EDFBIZ - Corporate Climate Leadership; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Global Strategy - China&quot; ), &quot;Global Strategy - China; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Global Strategy - Europe&quot; ), &quot;Global Strategy - Europe; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;MarComm - Ambassador&quot; ), &quot;MarComm - Ambassador; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;MarComm - Performance Marketing&quot; ), &quot;MarComm - Performance Marketing; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Membership - Catalyst Circle&quot; ), &quot;Membership - Catalyst Circle; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Oceans - Fishery Solutions Center&quot; ), &quot;Oceans - Fishery Solutions Center; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Political Affairs - Advocacy Network&quot; ), &quot;Political Affairs - Advocacy Network; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Political Affairs - C4 Defend Our Future&quot; ), &quot;Political Affairs - C4 Defend Our Future; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Political Affairs - C4 Moms Clean Air Force&quot; ), &quot;Political Affairs - C4 Moms Clean Air Force; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Political Affairs - Defend Our Future&quot; ), &quot;Political Affairs - Defend Our Future; &quot;,null ) &amp;
IF ( INCLUDES ( Organization_sub_constituency__c  , &quot;Political Affairs - Moms Clean Air Force&quot; ), &quot;Political Affairs - Moms Clean Air Force; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns Account Sub-Constituency as text for Compact Layouts.</inlineHelpText>
    <label>Sub-Constituency Text</label>
    <type>Text</type>
</CustomField>