force-app/main/default/objects/Account/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub-Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Parts &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Tires &amp; Rubber</fullName>
            </value>
            <value>
                <fullName>Automobile Manufacturers</fullName>
            </value>
            <value>
                <fullName>Motorcycle Manufacturers</fullName>
            </value>
            <value>
                <fullName>Diversified Banks</fullName>
            </value>
            <value>
                <fullName>Regional Banks</fullName>
            </value>
            <value>
                <fullName>Thrifts &amp; Mortgage Finance</fullName>
            </value>
            <value>
                <fullName>Aerospace &amp; Defense</fullName>
            </value>
            <value>
                <fullName>Building Products</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>Electrical Components &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Heavy Electrical Equipment</fullName>
            </value>
            <value>
                <fullName>Industrial Conglomerates</fullName>
            </value>
            <value>
                <fullName>Agricultural &amp; Farm Machinery</fullName>
            </value>
            <value>
                <fullName>Construction Machinery &amp; Heavy Trucks</fullName>
            </value>
            <value>
                <fullName>Industrial Machinery</fullName>
            </value>
            <value>
                <fullName>Trading Companies &amp; Distributors</fullName>
            </value>
            <value>
                <fullName>Commercial Printing</fullName>
            </value>
            <value>
                <fullName>Diversified Support Services</fullName>
            </value>
            <value>
                <fullName>Environmental &amp; Facilities Services</fullName>
            </value>
            <value>
                <fullName>Office Services &amp; Supplies</fullName>
            </value>
            <value>
                <fullName>Security &amp; Alarm Services</fullName>
            </value>
            <value>
                <fullName>Human Resource &amp; Employment Services</fullName>
            </value>
            <value>
                <fullName>Research &amp; Consulting Services</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Home Furnishings</fullName>
            </value>
            <value>
                <fullName>Homebuilding</fullName>
            </value>
            <value>
                <fullName>Household Appliances</fullName>
            </value>
            <value>
                <fullName>Housewares &amp; Specialties</fullName>
            </value>
            <value>
                <fullName>Leisure Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>